# evropuvefurinn_rag

./: .env.template  .gitignore  README.md  pyproject.toml  render.yaml
admin/: index.html  package-lock.json  package.json  review.html  tsconfig.app.json  tsconfig.json  vite.config.ts
admin/src/: App.tsx  index.css
admin/src-review/: App.tsx
admin/src-review/components/: ReviewLayout.tsx
admin/src-review/hooks/: use-review-auth.tsx
admin/src-review/lib/: review-api.ts
admin/src-review/pages/: ReviewDetailPage.tsx  ReviewListPage.tsx  ReviewLoginPage.tsx
admin/src/components/: AppLayout.tsx  ProtectedRoute.tsx
admin/src/components/settings/: HealthTab.tsx  ModelsTab.tsx  PromptsTab.tsx  types.ts
admin/src/components/ui/: badge.tsx  button.tsx  dropdown-menu.tsx  input.tsx  table.tsx
admin/src/hooks/: use-auth.tsx
admin/src/lib/: api.ts
admin/src/pages/: ArticleDetailPage.tsx  ArticleFormPage.tsx  ArticlesPage.tsx  DashboardPage.tsx  LoginPage.tsx  PlaygroundPage.tsx  QueryLogPage.tsx  ReviewersPage.tsx  ReviewsPage.tsx  SystemHealthPage.tsx
app/: config.py  main.py
app/db/: database.py  queries.py
app/middleware/: auth.py  rate_limit.py  review_auth.py
app/models/: review_schemas.py  schemas.py
app/routers/: admin.py  articles.py  health.py  query.py  review.py  settings.py
app/services/: embedding_service.py  gemini_service.py  pinecone_service.py  rag_service.py  settings_service.py
prompts/: scope_guard.yaml  system_prompt.yaml
scripts/: backfill_embeddings.py  migrate_articles.py  seed_articles.py
tests/: conftest.py
